# test-is-invalid-mage

./: .env.example  .gitignore  README.md  api.dockerfile  config.py  main.py  pyproject.toml
api/: depends.py  dtos.py  router.py
application/: image_ai_moderation.py
infrastructure/: ai_api_service.py
interfaces/: ai_api_service.py  image_ai_moderation.py
tests/: test_ai_api_service.py
